--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Intro to Computer Science
+title: Introduction to Computer Science
 
 # Your name to show in the footer
 author: Julia Lourenco
